--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,9 +3,15 @@
 
 :root {
     --primary: #fe2c55;
+
+    //defaultLayout
+    --default-layout-header-height: 60px;
+    --default-layout-header-background: #fff;
+    --default-layout-width: 1150px;
 }
 
 * {
+    margin: 0;
     box-sizing: border-box;
 }
 
