--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,7 +3,8 @@
 
 :root {
     --primary: #fe2c55;
-
+    --black: rgba(22, 24, 35, 1);
+    --gray: #a7a7ab;
     //defaultLayout
     --default-layout-header-height: 60px;
     --default-layout-header-background: #fff;
@@ -24,4 +25,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--gray);
 }
