--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+    --search-border-radius: 92px;
+    --search-button-witdh: 52px;
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -9,4 +11,74 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width, 1150px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+}
+.search {
+    position: relative;
+    width: 361px;
+    height: 46px;
+    padding-left: 16px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    display: flex;
+    border: 1.5px solid transparent;
+    input {
+        caret-color: var(--primary);
+        flex: 1;
+        height: 100%;
+        color: var(--black);
+        font-size: 1.6rem;
+        background-color: transparent;
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: var(--black);
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 9px;
+        right: var(--search-button-witdh);
+        width: 1px;
+        height: 28px;
+        background-color: var(--gray);
+    }
+
+    &:focus-within {
+        border-color: var(--black);
+    }
+}
+
+.clear,
+.loading {
+    padding: 0px;
+    position: absolute;
+    right: calc(var(--search-button-witdh) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--gray);
+}
+.search-btn {
+    width: var(--search-button-witdh);
+    height: 100%;
+    font-size: 1.8rem;
+    color: var(--gray);
+
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
 }
